syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

package ficus;

message SimpleEventLog {
    repeated SimpleTrace traces = 1;
}

message SimpleTrace {
    repeated Event events = 1;
}

message Event {
    string name = 1;
    EventStamp stamp = 2;
}

message EventStamp {
    oneof stamp {
        google.protobuf.Timestamp date = 1;
        uint64 order = 2;
    }
}


message HashesEventLog {
    repeated HashesLogTrace traces = 2;
}

message HashesLogTrace {
    repeated uint64 events = 1;
}


message ContextKey {
    string name = 1;
}

message ContextValue {
    google.protobuf.Any value = 1;
}